--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-  "name": "windowshades",
+  "name": "windowshades2",
   "version": "1.0.0",
-  "description": "Control Hunter Douglas window shades",
   "main": "index.js",
-  "author": "Mike Sweetman",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "alexa-app": "^2.1.0",
-    "lodash": "^4.14.0",
-    "request": "^2.74.0",
-    "request-promise": "^4.0.2"
-  }
+    "ask-sdk": "^2.14.0",
+    "http": "^0.0.1-security"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/masweetman/windowshades.git"
+  },
+  "bugs": {
+    "url": "https://github.com/masweetman/windowshades/issues"
+  },
+  "homepage": "https://github.com/masweetman/windowshades#readme",
+  "description": ""
 }
